--- a/project/static/css/aboutus-content.css
+++ b/project/static/css/aboutus-content.css
@@ -7,7 +7,7 @@ body {
   height: 350px;
   display: flex;
   margin-top: 40px;
-  margin-bottom: 20px;
+  margin-bottom: 0;
   flex-direction: column;
   align-self: center;
   align-items: center;
