--- a/project/templates/footer1.html
+++ b/project/templates/footer1.html
@@ -2,7 +2,7 @@
   rel="stylesheet"
   href="{{ url_for('static', filename='css/footer.css') }}"
 />
-<link rel="stylesheet" href="../static/css/footer.css" />
+<link rel="stylesheet" href="../static/css/footer1.css" />
 <link
   rel="stylesheet"
   href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
@@ -10,11 +10,10 @@
 
 <footer>
   <div class="footer-content">
-    <h3>Eco Smart Viet Nam</h3>
+    <h4>Eco Smart Vietnam</h4>
     <p>
       Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quaerat optio
-      quae maiores odit nobis dolorem atque incidunt, ipsam a nemo ipsa
-      blanditiis cumque repudiandae, perferendis, omnis et eaque ad obcaecati.
+      quae maiores odit nobis dolorem atque incidunt, ipsam a nemo ipsa.
     </p>
     <!-- <ul class="socials">
       <li>
@@ -39,14 +38,18 @@
      </ul> -->
   </div>
   <div class="footer-bottom">
-    <p>copyright &copy; <a href="#">ecosmartvietnam</a></p>
-    <div class="footer-menu">
-      <ul class="f-menu">
-        <li><a href="">Home</a></li>
-        <li><a href="">About</a></li>
-        <li><a href="">Contact</a></li>
-        <li><a href="">Blog</a></li>
-      </ul>
+    <div class="footer-flex-item">
+      <p id="copyright-text">
+        Copyright &copy; <a class="footer-link" href="#">ecosmartvietnam</a>
+      </p>
+    </div>
+    <div class="footer-flex-item">
+      <div class="footer-menu">
+        <p><a class="footer-link" href="">Home</a></p>
+        <p><a class="footer-link" href="">About</a></p>
+        <p><a class="footer-link" href="">Contact</a></p>
+        <p><a class="footer-link" href="">Blog</a></p>
+      </div>
     </div>
   </div>
 </footer>
