New footer for every pages

--- a/project/templates/aboutus.html
+++ b/project/templates/aboutus.html
@@ -121,7 +121,7 @@
           </div>
         </div>
       </div>
-      {% include 'footer.html' %}
+      {% include 'footer1.html' %}
     </div>
   </body>
 </html>
