jquery version updated

--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -31,8 +31,9 @@
     <div>{% include 'aboutus_content.html' %}</div>
     {% include 'footer1.html' %}
     <script
-      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OG"
+      src="https://code.jquery.com/jquery-3.5.1.js"
+      integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
+      crossorigin="anonymous"
     ></script>
   </body>
 </html>
