--- a/project/templates/aboutus.html
+++ b/project/templates/aboutus.html
@@ -38,15 +38,15 @@
       <div>
         <div class="mainstyle">
           <!-- Including: Awareness, Mission & Vision, Founder -->
-          <h2 class="head2">Awareness, Mission and Vision</h2>
+          <h2 class="head2awareness">Awareness, Mission and Vision</h2>
         </div>
 
         {% include 'animation.html' %}
 
         <div class="mainstyle">
-          <h2 class="head2">Executive Board</h2>
+          <h2 class="head2executive">Executive Board</h2>
           {% include 'ourteam.html' %}
-          <h2 class="head2">The Story of Eco Smart Vietnam</h2>
+          <h2 class="head2ourteam">The Story of Eco Smart Vietnam</h2>
           <!-- Founder Content -->
           <div>
             <figure>
