--- a/project/static/css/activities_page.css
+++ b/project/static/css/activities_page.css
@@ -1,30 +1,29 @@
 
-html{
-  background-color: rgb(233, 255, 204);
-}
 .head1 {
-  background-image: url('../img/aboutus/titlebackground2.png');
-  background-color: rgb(233, 255, 204);
+  display:flex;
+  background-image: url('../img/activities_page/titlebackground.jpg');
   background-size: cover;
   padding-top: 20px;
-  height: 350px;
+  height: 15vh;
   width: 100%;
+  align-items:center;
+  justify-content:center;
 }
 .head1 h1 {
-  font-size: 80px;
+  font-size: 5vh;
   font-weight: bolder;
-  color: white;
-  text-align: center;
-  padding-top: 40px;
+  color: #E5D9B6;
 }
-
+.head1 h1:hover {
+  transform: scale(1.2)
+}
 #activities_news{
   width:100%;
   display: flex;
   justify-content: center;
   flex-direction: column;
   align-items: center;
-  background-color:  rgb(233, 255, 204);
+  background-color:  #E5D9B6;
 }  
 
 @media screen and (max-width: 1000px) {
@@ -74,12 +73,12 @@ img{
   border-radius: 5%;
   width:60%;
   height: auto;
-  background-color: rgb(131, 189, 117);
+  background-color: #E5D9B6;
   display:flex;
   flex-direction: row;
   margin-bottom: 20px;
   margin-top:15px;
-  box-shadow: 0 0 1em #1f003b;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
   font-size: 50%;
   /* position: relative; */
 
@@ -95,42 +94,19 @@ img{
   bottom: 5%;
   text-decoration-line: none;
   margin-left: 70%;
-  border:1px black solid;
+  border:2px #285430 solid;
   border-radius: 20px;
   font-size: 1vw;
-  color:black;
+  color:#285430;
   padding: 2% 5% 2% 5%;
   transition: 0.3s;
   background-color: white;
 }
 .text3:hover{
   border-color: white;
-  background-color: green;
+  background-color: #285430;
   color:white;
   transition: 0.3s ;
-}
-selector .elementor-pagination{
-  padding: 30px 20px 40px 20px;
-  background: #E1FD13;
-}
-.elementor-pagination{
-  width: 100%;
-  height: 50px;
-  display: flex;
-  justify-content: center;
-  background-color: rgb(233, 255, 204);
-  text-decoration-line: none;
-}
-.page-number{
-  text-decoration-line: none;
-  margin: 10px;    
-  color: black;
-  font-size: 18px; 
-  font-weight: 600;                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   
-}
-.page-number :hover{
-  color: blue;
-
 }
 /* .loader-wrapper {
   width: 100%;
