--- a/project/static/css/animation.css
+++ b/project/static/css/animation.css
@@ -1,12 +1,13 @@
 .myContainer {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Heebo', sans-serif;
   font-size: 14px;
-  width: 50vw;
+  width: 40vw;
+  height:auto;
   margin: 2px auto;
 }
 
 .carousel-item img {
-  width: 50vw;
+  width: 40vw;
 }
 
 #indicators {
@@ -15,12 +16,14 @@
 
 .animation-content {
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 1.3vw;
-  background-color: #98a587;
-  color: white;
-  height: 17vw;
-  padding-top: 1vw;
+  font-size: 1vw;
+  font-weight:bold;
+  background-color:	#ECFFDC;
+  color:#494F55;
+  width:40vw;
+  padding-top: 0.5vw;
   opacity: 85%;
+  margin-bottom:2rem;
 }
 
 .animation-content p {
@@ -39,7 +42,7 @@
   }
 
   .animation-content {
-    height: 21vw;
+    width: 70vw;
   }
   .animation-content p {
     font-size: 1.5vw;
