--- a/project/templates/footer1.html
+++ b/project/templates/footer1.html
@@ -3,10 +3,6 @@
   href="{{ url_for('static', filename='css/footer.css') }}"
 />
 <link rel="stylesheet" href="../static/css/footer1.css" />
-<link
-  rel="stylesheet"
-  href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
-/>
 
 <footer>
   <div class="footer-content">
@@ -15,31 +11,26 @@
       Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quaerat optio
       quae maiores odit nobis dolorem atque incidunt, ipsam a nemo ipsa.
     </p>
-    <!-- <ul class="socials">
-      <li>
-        <a href="https://www.facebook.com/ecosmartvietnam"
-          ><i class="fa fa-facebook"></i
-        ></a>
-      </li>
-      <li>
-        <a href="https://www.instagram.com/ecosmart.vietnam"
-          ><i class="fa fa-instagram"></i
-        ></a>
-      </li>
-      <li>
-        <a href="#"><i class="fa fa-google-plus"></i></a>
-      </li>
-      <li>
-        <a href="#"><i class="fa fa-youtube"></i></a>
-      </li>
-      <!-- <li>
-        <a href="#"><i class="fa fa-linkedin-square"></i></a>
-      </li> 
-     </ul> -->
   </div>
+
+  <div class="footer-social">
+    <a href="https://www.facebook.com/ecosmartvietnam"
+      ><i class="fa-brands fa-facebook footer-icon"></i
+    ></a>
+
+    <a
+      href="https://www.instagram.com/ecosmart.vietnam/?fbclid=IwAR33v8jFTPm6HNBmon6yHHyNhUbpEJvLy9DKcHGuEd04n6YYh4S35JoM7hM"
+      ><i class="fa-brands fa-instagram footer-icon"></i
+    ></a>
+
+    <a href="https://www.linkedin.com"
+      ><i class="fa-brands fa-linkedin footer-icon"></i
+    ></a>
+  </div>
+
   <div class="footer-bottom">
     <div class="footer-flex-item">
-      <p id="copyright-text">
+      <p class="copyright-text">
         Copyright &copy; <a class="footer-link" href="#">ecosmartvietnam</a>
       </p>
     </div>
@@ -48,11 +39,15 @@
         <p><a class="footer-link" href="">Home</a></p>
         <p><a class="footer-link" href="">About</a></p>
         <p><a class="footer-link" href="">Contact</a></p>
-        <p><a class="footer-link" href="">Blog</a></p>
       </div>
     </div>
   </div>
 </footer>
+
+<script
+  src="https://kit.fontawesome.com/550795c27f.js"
+  crossorigin="anonymous"
+></script>
 <!-- <script>
   $(window).on("load", function () {
     $(".loader").fadeOut("slow");
