navbar responsive update + add product page

--- a/project/templates/navbar.html
+++ b/project/templates/navbar.html
@@ -66,9 +66,12 @@
 
         <div class="collapse navbar-collapse" id="navbarToggler">
           <!-- The list is right-aligned (ms-auto)  -->
-          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+          <ul class="navbar-nav ms-auto mb-2 mb-lg-0" id="nav-list">
             <li class="nav-item">
               <a class="nav-link" href="/">Home </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/product/">Products </a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/activities/">Activities </a>
