--- a/project/static/css/navbar.css
+++ b/project/static/css/navbar.css
@@ -1,5 +1,7 @@
 /* Made by GPham  */
-
+body {
+  width: 100%;
+}
 .navbar {
   background-color: #e5d9b6;
   padding-top: 0;
@@ -163,5 +165,14 @@
   }
   .navbar-brand {
     width: 7rem;
+  }
+}
+
+@media (max-width: 991px){
+  #last-nav-item {
+    display: none;
+  }
+  #nav-list {
+    margin-right: 20px;
   }
 }
