--- a/project/templates/activities/activities.html
+++ b/project/templates/activities/activities.html
@@ -30,55 +30,30 @@
         <h1>Activities</h1>
       </div>
     <div id="activities_news">
-      
-      <div class="content_block ">
-        <div class="content2" style="border-top-left-radius: 5%; border-bottom-left-radius: 5%;">
-          <div class="block_header">
-            <div class="text1">TUYỂN THÀNH VIÊN BAN MARKETING/ COMMUNICATION GEN 1.5</div>
-          </div>
-          <span class="text2"
-            >🤔Có rất nhiều bạn tham gia hàng loạt dự án không chọn lọc, không chất lượng chỉ để “rinh" về cho mình tấm Certificate khi apply học bổng. 
-            Tuy nhiên các bạn đã bỏ qua cơ hội được training, thực hành cùng muôn vàng cơ hội được mở rộng mối quan hệ cùng các kinh nghiệm điều hành dự án thực tiễn...
-          </span>
-          <div class="readmore">
-            <a
-              href="https://www.facebook.com/ecosmartvietnam/posts/pfbid02FVoA7iucatRg13FpcC9KtwhA5bKeUKU9ZbePh9imyz2y91EeSBqRVFavKXsK4cmfl"
-              class="text3"
-            >
-              Read More</a
-            >
-          </div>
-        </div>
-        <div class="image2">
-          <img style="border-top-right-radius: 5%; border-bottom-right-radius: 5%;"
-            src="{{ url_for('static', filename='img/activities_page/activities_page_8.jpg') }}"
-            class="img"
-            alt=""
-          />
-        </div>
-      </div>
-      
 
+      
       <div class="content_block ">
         <div class="image2" >
           <img style="border-top-left-radius: 5%; border-bottom-left-radius: 5%;"
-            src="{{ url_for('static', filename='img/activities_page/activities_page_7.jpg') }}"
+            src="{{ url_for('static', filename='img/activities_page/activities_page_15.jpg') }}"
             class="img"
-            alt="THE MAGIC OF BIRDSONG - ĐIỀU KÌ DIỆU CỦA TIẾNG CHIM CA"
+            alt="CHECK YOUR MAIL!"
           />
         </div>
         <div class="content2" style="border-top-right-radius: 5%; border-bottom-right-radius: 5%;">
           <div class="block_header">
-            <div class="text1">THE MAGIC OF BIRDSONG - ĐIỀU KÌ DIỆU CỦA TIẾNG CHIM CA</div>
+            <div class="text1">CHECK YOUR MAIL!</div>
           </div>
           <span class="text2">
-            Theo một cuộc khảo sát của RSPB - Hiệp hội Bảo vệ Chim Hoàng gia tại Anh được công bố trên Science Reports, 
-            các nhà khoa học phát hiện ra rằng việc ngắm chim và nghe tiếng chim hót có tác động tích cực đến sức khỏe của con người.
+            Loa…loa…loa Eco Smart VietNam
+            ĐÃ CÓ KẾT QUẢ TUYỂN THÀNH VIÊN!
+            
+            Lời đầu tiên, ESV xin gửi lời cảm ơn chân thành nhất tới những chiếc đơn xinh xắn từ các bạn.
             ...
           </span>
           <div class="readmore">
             <a
-              href="https://www.facebook.com/ecosmartvietnam/posts/pfbid0YYuweWSaGBPiAgebxtzHNoj3CYevq389xZjCJkraEfY1XhzQ6azyztfhRwNk6RjLl"
+              href="https://www.facebook.com/photo/?fbid=138988312395956&set=a.109001262061328"
               class="text3"
             >
               Read More</a
@@ -90,15 +65,15 @@
       <div class="content_block ">
         <div class="content2" style="border-top-left-radius: 5%; border-bottom-left-radius: 5%;">
           <div class="block_header">
-            <div class="text1">ECO VOTE: ĐÂU LÀ QUÁN QUÂN LÒNG BẠN?</div>
+            <div class="text1"></div>
           </div>
           <span class="text2"
-            >Ngày nay, nhu cầu sử dụng các sản phẩm thân thiện với môi trường của con người ngày càng tăng,
-             bởi lẽ ý thức về việc cần phải bảo vệ Trái Đất đang ngày càng được nâng cao...
+            >Join our mission to provide eco-friendly products with a Young Startup mindset. At our core, we value respect, efficiency, and professionalism.
+            We're recruiting individuals who share our vision and passion for a sustainable future. Check out the link in the comments to learn more!
           </span>
           <div class="readmore">
             <a
-              href="https://www.facebook.com/ecosmartvietnam/posts/pfbid0QA46EYZ5umw9P5qE7Wf7fdT5jjofHSVhWRDF6dFxd7oHdNvKT4uJyQ5aqhNZBQScl"
+              href="https://www.facebook.com/photo?fbid=137901259171328&set=a.106058629022258"
               class="text3"
             >
               Read More</a
@@ -107,35 +82,32 @@
         </div>
         <div class="image2">
           <img style="border-top-right-radius: 5%; border-bottom-right-radius: 5%;"
-            src="{{ url_for('static', filename='img/activities_page/activities_page_6.jpg') }}"
+            src="{{ url_for('static', filename='img/activities_page/activities_page_14.jpg') }}"
             class="img"
             alt=""
           />
         </div>
       </div>
 
-
       <div class="content_block ">
         <div class="image2" >
           <img style="border-top-left-radius: 5%; border-bottom-left-radius: 5%;"
-            src="{{ url_for('static', filename='img/activities_page/activities_page_1.jpg') }}"
+            src="{{ url_for('static', filename='img/activities_page/activities_page_13.jpg') }}"
             class="img"
             alt="TẾT CỦA CÔNG DÂN TOÀN CẦU CÓ GÌ KHÁC BIỆT?"
           />
         </div>
         <div class="content2" style="border-top-right-radius: 5%; border-bottom-right-radius: 5%;">
           <div class="block_header">
-            <div class="text1">TẾT CỦA CÔNG DÂN TOÀN CẦU CÓ GÌ KHÁC BIỆT?</div>
+            <div class="text1">Exciting news!</div>
           </div>
           <span class="text2">
-            Liệu bạn có biết mùa Tết của “Công dân toàn cầu” có gì khác biệt?
-            Nếu là người dân Việt Nam chắc hẳn bạn cũng chẳng xa lạ gì với các
-            nghi thức truyền thống như dọn dẹp, lì xì, nấu bánh chưng, tảo
-            mộ,...
+            We've joined the Social Business/Startup system, and we're currently recruiting talented individuals who share our passion for eco-friendly products!
+...
           </span>
           <div class="readmore">
             <a
-              href="https://www.facebook.com/ecosmartvietnam/posts/pfbid0kH4rnxhLiHesvXGJsoscLg1qTBYNUBHfFpZtGwvXkQVVoadSEkaEHuQt729o9APRl"
+              href="https://www.facebook.com/photo?fbid=137899759171478&set=a.105895305705257"
               class="text3"
             >
               Read More</a
@@ -147,16 +119,15 @@
       <div class="content_block ">
         <div class="content2" style="border-top-left-radius: 5%; border-bottom-left-radius: 5%;">
           <div class="block_header">
-            <div class="text1">ECO WRAPUP: CÙNG TỔNG KẾT NĂM CŨ CỦA BẠN</div>
+            <div class="text1">THÔNG BÁO CÒN 1 NGÀY ĐĂNG KÝ ĐÓNG ĐƠN</div>
           </div>
           <span class="text2"
-            >Năm mới Quý Mão đang dần đến gõ cửa, khép lại hành trình của năm cũ
-            và mở ra một cánh cửa mới với thật nhiều cuộc phiêu lưu đang chờ đón
-            bạn...
+            >Chỉ còn 1 ngày nữa… Eco Smart Vietnam sẽ đóng đơn tuyển thành viên.
+            Vì thế hãy nhanh chóng đăng ký ngay để có cơ hội tham gia Eco Smart Vietnam nhé....
           </span>
           <div class="readmore">
             <a
-              href="https://www.facebook.com/ecosmartvietnam/posts/pfbid02eJem4sn4VZD2kk4WAvDugTStU4UMuMBXjbJ9p4D57svRWiUMjBbyZ7AbhL1rggoGl"
+              href="https://www.facebook.com/photo?fbid=137528845875236&set=a.109001262061328"
               class="text3"
             >
               Read More</a
@@ -165,7 +136,7 @@
         </div>
         <div class="image2">
           <img style="border-top-right-radius: 5%; border-bottom-right-radius: 5%;"
-            src="{{ url_for('static', filename='img/activities_page/activities_page_2.jpg') }}"
+            src="{{ url_for('static', filename='img/activities_page/activities_page_12.jpg') }}"
             class="img"
             alt=""
           />
@@ -175,7 +146,7 @@
       <div class="content_block ">
         <div class="image2">
           <img style="border-top-left-radius: 5%; border-bottom-left-radius: 5%;"
-            src="{{ url_for('static', filename='img/activities_page/activities_page_3.jpg') }}"
+            src="{{ url_for('static', filename='img/activities_page/activities_page_11.jpg') }}"
             class="img"
             alt=""
             class="anh"
@@ -183,15 +154,16 @@
         </div>
         <div class="content2" style="border-top-right-radius: 5%; border-bottom-right-radius: 5%;">
           <div class="block_header">
-            <div class="text1">ECO MÙA TẾT: ĂN TẾT NHƯNG VẪN SỐNG XANH?</div>
+            <div class="text1">Valentine’s Day is a holiday with one of the most significant carbon footprints</div>
           </div>
           <span class="text2"
-            >Có lẽ đối với mọi người dân Việt Nam, mùa tết đến chính là khoảng
-            thời gian chúng chúng ta mong chờ nhất trong suốt một năm...
+            >Nếu sự ngọt ngào của Ngày lễ tình nhân khiến bạn xao xuyến,
+            thì…
+            những thiệt hại mà ngày lễ này gây ra cho môi trường có thể thực sự khiến trái tim bạn tan nát....
           </span>
           <div class="readmore">
             <a
-              href="https://www.facebook.com/photo?fbid=128195530141901&set=a.107563378871783"
+              href="https://www.facebook.com/photo?fbid=137191855908935&set=a.109001262061328"
               class="text3"
             >
               Read More</a
@@ -203,16 +175,17 @@
       <div class="content_block ">
         <div class="content2"style="border-top-left-radius: 5%; border-bottom-left-radius: 5%;">
           <div class="block_header">
-            <div class="text1">ECO MEME: GIẢI TRÍ CÙNG ECO SMART VIETNAM</div>
+            <div class="text1">HUMAN OF ESV EP.3-2: 3 THÁNG TRÔI QUA, THÀNH VIÊN ESV CÓ CẢM NHẬN GÌ?</div>
           </div>
           <span class="text2"
-            >Meme hay còn được gọi với cái tên thân thương hơn là ảnh chế là một
-            trong những điều không thể thiếu được trong các cuộc trò chuyện giữa
-            bạn bè, hội nhóm ngày nay...
+            >- Alo! Tổng đài Eco Smart Vietnam xin nghe.
+            - Cho hỏi ở ESV có gì mà mọi người thích thú thế?
+            - Thế để tớ kể cậu nghe cảm nhận của những thành viên ESV sau 3 tháng gắn bó nhé!
+            
           </span>
           <div class="readmore">
             <a
-              href="https://www.facebook.com/ecosmartvietnam/posts/pfbid02HGfZksdhgGQGhurdfsDJetKQeFuEpPsyD1F5JgUMgL31eFmqvsc2AhG4j7aZSgNXl"
+              href="https://www.facebook.com/ecosmartvietnam/posts/pfbid02JrrQmT6i68XZtjRE7zuWxdeftFF8cfy14sz2QbvV8q8KTUTeE8q4X1SsZrRGQL5vl"
               class="text3"
             >
               Read More</a
@@ -221,7 +194,7 @@
         </div>
         <div class="image2">
           <img style="border-top-right-radius: 5%; border-bottom-right-radius: 5%;"
-            src="{{ url_for('static', filename='img/activities_page/activities_page_4.jpg') }}"
+            src="{{ url_for('static', filename='img/activities_page/activities_page_10.jpg') }}"
             class="img"
             alt=""
           />
@@ -231,25 +204,45 @@
       <div class="content_block ">
         <div class="image2">
           <img style="border-top-left-radius: 5%; border-bottom-left-radius: 5%;"
-            src="{{ url_for('static', filename='img/activities_page/activities_page_5.jpg') }}"
+            src="{{ url_for('static', filename='img/activities_page/activities_page_9.jpg') }}"
             class="img"
             alt=""
           />
         </div>
         <div class="content2" style="border-top-right-radius: 5%; border-bottom-right-radius: 5%;">
           <div class="block_header">
-            <div class="text1">Ready for phase 2: TAKING OFF!</div>
+            <div class="text1">HUMAN OF ESV EP.3-2: 3 THÁNG TRÔI QUA, THÀNH VIÊN ESV CÓ CẢM NHẬN GÌ?</div>
           </div>
-          <span class="text2">#ESV #ECO #ECOSMARTVIETNAM #IMPACT </span>
+          <span class="text2">Thấm thoát đã 3 tháng trôi qua kể từ khi Eco Smart Vietnam bắt đầu khởi động. Từ xây dựng nền móng đầu tiên, 
+            đến lúc cùng nhau làm việc và học tập, những thành viên Eco Smart Vietnam luôn trau dồi và phát triển bản thân</span>
           <div class="readmore">
             <a
-              href="https://www.facebook.com/photo?fbid=126644343630353&set=a.105895305705257"
+              href="https://www.facebook.com/ecosmartvietnam/posts/pfbid02JrrQmT6i68XZtjRE7zuWxdeftFF8cfy14sz2QbvV8q8KTUTeE8q4X1SsZrRGQL5vl"
               class="text3"
             >
               Read More</a
             >
           </div>
         </div>
+      </div>
+    </div>
+
+      <div class="elementor-pagination">
+      
+      <div class="page-number-item">
+        <a class="page-number" href="/activities/"><1</a>
+      </div>
+
+      <div class="page-number-item">
+        <a class="page-number" href="/activities/page2/">2</a>
+      </div>
+
+      <div class="page-number-item">
+        <a class="page-number" aria-current="page" href="/activities/page3/">3</a>
+      </div>
+
+      <div class="page-number-item">
+        <a class="page-number" aria-current="page" href="/activities/page4/">4></a>
       </div>
     </div>
 
