Changing color of contact box-item

--- a/project/static/css/contactus.css
+++ b/project/static/css/contactus.css
@@ -63,7 +63,7 @@
   margin-left: 2rem;
   margin-bottom: 0.5rem;
   box-sizing: border-box;
-  color: white;
+  color: black;
   background: white;
 }
 
